--- a/index.html
+++ b/index.html
@@ -30,11 +30,115 @@
 
     </header>
 
-    <main class="contenedor">
-        <h1>Titulo Pagina</h1>
+    <main class="contenedor nosotros">
+        <h1>Más sobre nosotros</h1>
+        <div class="contenido-nosotros">
+            <div class="seccion-nosotros">
+                <img src="src/img/full/icono1.svg" alt="icono nosotros">
+                <h3>Seguridad</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem unde sit ut at fuga dolores nulla aperiam laborum, corporis sed. Quia reiciendis repellat voluptatibus magnam quae asperiores provident rem?</p>
+            </div>
+            <div class="seccion-nosotros">
+                <img src="src/img/full/icono2.svg" alt="icono nosotros">
+                <h3>Precio</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem unde sit ut at fuga dolores nulla aperiam laborum, corporis sed. Quia reiciendis repellat voluptatibus magnam quae asperiores provident rem?</p>
+            </div>
+            <div class="seccion-nosotros">
+                <img src="src/img/full/icono3.svg" alt="icono nosotros">
+                <h3>A tiempo</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem unde sit ut at fuga dolores nulla aperiam laborum, corporis sed. Quia reiciendis repellat voluptatibus magnam quae asperiores provident rem?</p>
+            </div>
+        </div>
     </main>
 
-    <footer class="seccion footer">
+    <section class="contenedor seccion">
+        <h2>Casas y Departamentos en Venta</h2>
+        <div class="contenedor-anuncios">
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/full/anuncio1.webp" type="image/webp">
+                    <img src="build/img/full/anuncio1.jpg" alt="imagen propiedad">
+                </picture>
+                <div class="contenido-anuncio">
+                    <h3>Casa de Lujo en el Lago</h3>
+                    <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio.</p>
+                    <p class="precio">$3000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li class="icono">
+                            <img src="src/img/full/icono_wc.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_estacionamiento.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_dormitorio.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                    </ul>
+                    <a class="boton" href="index.html">Ver Propiedad</a>
+                </div>
+            </div>
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/full/anuncio2.webp" type="image/webp">
+                    <img src="build/img/full/anuncio2.jpg" alt="imagen propiedad">
+                </picture>
+                <div class="contenido-anuncio">
+                    <h3>Casa de Alta Categoría</h3>
+                    <p>Casa en el bosque con ambiente fenomenal, acabados de lujo a un excelente precio.</p>
+                    <p class="precio">$3000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li class="icono">
+                            <img src="src/img/full/icono_wc.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_estacionamiento.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_dormitorio.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                    </ul>
+                    <a class="boton" href="index.html">Ver Propiedad</a>
+                </div>
+            </div>
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/full/anuncio3.webp" type="image/webp">
+                    <img src="build/img/full/anuncio3.jpg" alt="imagen propiedad">
+                </picture>
+                <div class="contenido-anuncio">
+                    <h3>Casa con Piscina</h3>
+                    <p>Casa para fiestas con piscina incluida, acabados de lujo a un excelente precio.</p>
+                    <p class="precio">$3000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li class="icono">
+                            <img src="src/img/full/icono_wc.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_estacionamiento.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_dormitorio.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                    </ul>
+                    <a class="boton" href="index.html">Ver Propiedad</a>
+                </div>
+            </div>
+            
+        </div>
+
+
+    </section>
+
+    <footer class="footer">
         <div class="contenedor  contenido-footer">
             <nav class="navegacion">
                 <a class="navegacion__enlace" href="">Nosotros</a>
