Finalizada Pagina Principal

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa de Lujo en el Lago</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio.</p>
-                    <p class="precio">$3000</p>
+                    <p class="precio">$5000</p>
                     <ul class="iconos-caracteristicas">
                         <li class="icono">
                             <img src="src/img/full/icono_wc.svg" alt="icono propiedad">
@@ -114,7 +114,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa con Piscina</h3>
                     <p>Casa para fiestas con piscina incluida, acabados de lujo a un excelente precio.</p>
-                    <p class="precio">$3000</p>
+                    <p class="precio">$9000</p>
                     <ul class="iconos-caracteristicas">
                         <li class="icono">
                             <img src="src/img/full/icono_wc.svg" alt="icono propiedad">
@@ -134,9 +134,62 @@
             </div>
             
         </div>
-
-
+        <div class="anuncios-verMas">
+            <a class="boton-verMas" href="index.html">Ver Todas</a>
+        </div>
     </section>
+
+    <div class="contacto seccion">
+        <section class="contenedor contacto-contenido">
+            <h2>Encuentra la casa de tus sueños</h2>
+            <p>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</p>
+            <a class="boton-contacto" href="index.html">Contáctanos</a>
+        </section>
+    </div>
+    
+    <div class="contenedor seccion blog-testimoniales">
+        <section class="blog">
+            <h3>Nuestro Blog</h3>
+            <article class="blog-entrada">
+                <picture>
+                    <source srcset="build/img/full/blog1.webp" type="image/webp">
+                    <img src="build/img/full/blog1.jpg" alt="casa blog">
+                </picture>
+                <div class="entrada-contenido">
+                    <a href="">
+                        <h4>Terraza en el techo de tu casa</h4>
+                    </a>
+                    <p>Escrito el: <span>01/01/2025</span> por: <span>Admin</span></p>
+                    <p>Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero.</p>
+                </div>
+            </article>
+            <article class="blog-entrada">
+                <picture>
+                    <source srcset="build/img/full/blog2.webp" type="image/webp">
+                    <img src="build/img/full/blog2.jpg" alt="casa blog">
+                </picture>
+                <div class="entrada-contenido">
+                    <a href="index.html">
+                        <h4>Guía para la decoración de tu hogar</h4>
+                    </a>
+                    <p>Escrito el: <span>01/01/2025</span> por: <span>Admin</span></p>
+                    <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio.</p>
+                </div>
+            </article>
+
+        </section>
+
+        <section class="testimoniales">
+            <h3>Testimoniales</h3>
+            <div class="testimonio">
+                <div class="testimonio-contenido">
+                    <img src="src/img/full/comilla.svg" alt="comilla">
+                    <p>El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas.</p>
+                </div>
+                <p class="autor">- Gabriel Tumbaco</p>    
+            </div>
+        </section>
+    </div>
 
     <footer class="footer">
         <div class="contenedor  contenido-footer">
