--- a/anuncios.html
+++ b/anuncios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienes Raices</title>
+    <title>Anuncios</title>
     <link rel="stylesheet" href="build/css/app.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header inicio">
+    <header class="header">
         <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="index.html">
@@ -25,34 +25,12 @@
                     <a class="navegacion__enlace" href="contacto.html">Contacto</a>
                 </nav>
             </div>
-            <h1>Venta de Casas y Departamentos Exclusivos de lujo</h1>
         </div>
 
     </header>
 
-    <main class="contenedor nosotros">
-        <h1>Más sobre nosotros</h1>
-        <div class="contenido-nosotros">
-            <div class="seccion-nosotros">
-                <img src="src/img/full/icono1.svg" alt="icono nosotros">
-                <h3>Seguridad</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem unde sit ut at fuga dolores nulla aperiam laborum, corporis sed. Quia reiciendis repellat voluptatibus magnam quae asperiores provident rem?</p>
-            </div>
-            <div class="seccion-nosotros">
-                <img src="src/img/full/icono2.svg" alt="icono nosotros">
-                <h3>Precio</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem unde sit ut at fuga dolores nulla aperiam laborum, corporis sed. Quia reiciendis repellat voluptatibus magnam quae asperiores provident rem?</p>
-            </div>
-            <div class="seccion-nosotros">
-                <img src="src/img/full/icono3.svg" alt="icono nosotros">
-                <h3>A tiempo</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem unde sit ut at fuga dolores nulla aperiam laborum, corporis sed. Quia reiciendis repellat voluptatibus magnam quae asperiores provident rem?</p>
-            </div>
-        </div>
-    </main>
-
-    <section class="contenedor seccion">
-        <h2>Casas y Departamentos en Venta</h2>
+    <main class="contenedor pagina-anuncios">
+        <h1>Casas y Departamentos en Venta</h1>
         <div class="contenedor-anuncios">
             <div class="anuncio">
                 <picture>
@@ -132,64 +110,86 @@
                     <a class="boton" href="anuncio.html">Ver Propiedad</a>
                 </div>
             </div>
-            
-        </div>
-        <div class="anuncios-verMas">
-            <a class="boton-verMas" href="anuncios.html">Ver Todas</a>
-        </div>
-    </section>
-
-    <div class="contacto seccion">
-        <section class="contenedor contacto-contenido">
-            <h2>Encuentra la casa de tus sueños</h2>
-            <p>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</p>
-            <a class="boton-contacto" href="contacto.html">Contáctanos</a>
-        </section>
-    </div>
-    
-    <div class="contenedor seccion blog-testimoniales">
-        <section class="blog">
-            <h3>Nuestro Blog</h3>
-            <article class="blog-entrada">
+            <div class="anuncio">
                 <picture>
-                    <source srcset="build/img/full/blog1.webp" type="image/webp">
-                    <img src="build/img/full/blog1.jpg" alt="casa blog">
+                    <source srcset="build/img/full/anuncio4.webp" type="image/webp">
+                    <img src="build/img/full/anuncio4.jpg" alt="imagen propiedad">
                 </picture>
-                <div class="entrada-contenido">
-                    <a href="entrada.html">
-                        <h4>Terraza en el techo de tu casa</h4>
-                    </a>
-                    <p class="informacion-meta">Escrito el: <span>01/01/2025</span> por: <span>Admin</span></p>
-                    <p>Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero.</p>
+                <div class="contenido-anuncio">
+                    <h3>Casa Old School</h3>
+                    <p>Casa elegante con acabados old school, mueblería clásica de lujo a un excelente precio.</p>
+                    <p class="precio">$6000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li class="icono">
+                            <img src="src/img/full/icono_wc.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_estacionamiento.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_dormitorio.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                    </ul>
+                    <a class="boton" href="anuncio.html">Ver Propiedad</a>
                 </div>
-            </article>
-            <article class="blog-entrada">
-                <picture>
-                    <source srcset="build/img/full/blog2.webp" type="image/webp">
-                    <img src="build/img/full/blog2.jpg" alt="casa blog">
-                </picture>
-                <div class="entrada-contenido">
-                    <a href="entrada.html">
-                        <h4>Guía para la decoración de tu hogar</h4>
-                    </a>
-                    <p class="informacion-meta">Escrito el: <span>01/01/2025</span> por: <span>Admin</span></p>
-                    <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio.</p>
-                </div>
-            </article>
-
-        </section>
-
-        <section class="testimoniales">
-            <h3>Testimoniales</h3>
-            <div class="testimonio">
-                <div class="testimonio-contenido">
-                    <img src="src/img/full/comilla.svg" alt="comilla">
-                    <p>El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas.</p>
-                </div>
-                <p class="autor">- Gabriel Tumbaco</p>    
             </div>
-        </section>
-    </div>
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/full/anuncio5.webp" type="image/webp">
+                    <img src="build/img/full/anuncio5.jpg" alt="imagen propiedad">
+                </picture>
+                <div class="contenido-anuncio">
+                    <h3>Casa Europea</h3>
+                    <p>Casa moderna con vibras europeas, facilidades de lujo a un excelente precio.</p>
+                    <p class="precio">$9000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li class="icono">
+                            <img src="src/img/full/icono_wc.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_estacionamiento.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_dormitorio.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                    </ul>
+                    <a class="boton" href="anuncio.html">Ver Propiedad</a>
+                </div>
+            </div>
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/full/anuncio6.webp" type="image/webp">
+                    <img src="build/img/full/anuncio6.jpg" alt="imagen propiedad">
+                </picture>
+                <div class="contenido-anuncio">
+                    <h3>Casa Tecnológica</h3>
+                    <p>Casa equipada con tecnología de punta IoT, acabados de lujo y piscina a un excelente precio.</p>
+                    <p class="precio">$9000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li class="icono">
+                            <img src="src/img/full/icono_wc.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_estacionamiento.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                        <li class="icono">
+                            <img src="src/img/full/icono_dormitorio.svg" alt="icono propiedad">
+                            <p>3</p>
+                        </li>
+                    </ul>
+                    <a class="boton" href="anuncio.html">Ver Propiedad</a>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <footer class="footer">
         <div class="contenedor  contenido-footer">
