--- a/base.html
+++ b/base.html
@@ -19,10 +19,10 @@
                     <img src="src/img/full/logo.svg" alt="Logotipo">
                 </a>
                 <nav class="navegacion">
-                    <a class="navegacion__enlace" href="">Nosotros</a>
-                    <a class="navegacion__enlace" href="">Anuncios</a>
-                    <a class="navegacion__enlace" href="">Blog</a>
-                    <a class="navegacion__enlace" href="">Contacto</a>
+                    <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+                    <a class="navegacion__enlace" href="anuncios.html">Anuncios</a>
+                    <a class="navegacion__enlace" href="blog.html">Blog</a>
+                    <a class="navegacion__enlace" href="contacto.html">Contacto</a>
                 </nav>
             </div>
         </div>
@@ -33,13 +33,13 @@
         <h1>Titulo Pagina</h1>
     </main>
 
-    <footer class="seccion footer">
+    <footer class="footer">
         <div class="contenedor  contenido-footer">
             <nav class="navegacion">
-                <a class="navegacion__enlace" href="">Nosotros</a>
-                <a class="navegacion__enlace" href="">Anuncios</a>
-                <a class="navegacion__enlace" href="">Blog</a>
-                <a class="navegacion__enlace" href="">Contacto</a>
+                <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+                <a class="navegacion__enlace" href="anuncios.html">Anuncios</a>
+                <a class="navegacion__enlace" href="blog.html">Blog</a>
+                <a class="navegacion__enlace" href="contacto.html">Contacto</a>
             </nav>
             <p>Todos los derechos reservados 2025 &copy</p>
         </div>
