Añadiendo dinamismo - Tool Bar y Dark Mode

--- a/contacto.html
+++ b/contacto.html
@@ -18,12 +18,19 @@
                 <a href="index.html">
                     <img src="src/img/full/logo.svg" alt="Logotipo">
                 </a>
-                <nav class="navegacion">
-                    <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
-                    <a class="navegacion__enlace" href="anuncios.html">Anuncios</a>
-                    <a class="navegacion__enlace" href="blog.html">Blog</a>
-                    <a class="navegacion__enlace" href="contacto.html">Contacto</a>
-                </nav>
+                <div class="mobile-menu">
+                    <img src="src/img/full/barras.svg" alt="barras menu">
+                </div>
+
+                <div class="nav-dark-mode">
+                    <img class="icon-dark-mode" src="src/img/full/dark-mode.svg" alt="dark mode">
+                    <nav class="navegacion">
+                        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+                        <a class="navegacion__enlace" href="anuncios.html">Anuncios</a>
+                        <a class="navegacion__enlace" href="blog.html">Blog</a>
+                        <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+                    </nav>
+                </div>
             </div>
         </div>
 
@@ -96,7 +103,7 @@
 
     <footer class="footer">
         <div class="contenedor  contenido-footer">
-            <nav class="navegacion">
+            <nav class="navegacion mostrar">
                 <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
                 <a class="navegacion__enlace" href="anuncios.html">Anuncios</a>
                 <a class="navegacion__enlace" href="blog.html">Blog</a>
@@ -105,6 +112,8 @@
             <p>Todos los derechos reservados 2025 &copy</p>
         </div>
     </footer>
+    <script src="build/js/app.js"></script>
+
 
 </body>
 
